changed outer circle class as was not diplaying correctly on mobile size screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,6 +105,7 @@ body {
     position: relative;
     border-style: solid;
     border-width: 10px;
+    padding: 20px
   
 }
 
